layout issues
git-svn-id: file:///home/dmelo/lightningpacker/trunk@52 af365ad8-7e5f-4755-afa6-67cbf075a6a7

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -3,6 +3,7 @@ html {
     font-size: 15px;
     position: relative;
     min-height: 100%;
+    word-wrap: break-word;
 }
 
 .main-container {
